Add virtualthreads true/false option.