@@ -84,14 +84,17 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
 
